==> Hengy/sensornet/Complete Libraries/Arduino/lib/nRFSN/nRFSN.cpp <==
#include "nRFSN.h"

void nRFSNClass::initSPI(uint8_t SPIDiv)
{
	// SPI setup
	SPI.setBitOrder(MSBFIRST);              // Set most significant bit first
	SPI.setClockDivider(SPIDiv);			// Clock to Fosc/SPIDiv
	SPI.setDataMode(SPI_MODE0);             // Clock polarity 0; clock phase 0
	SPI.begin();                            // Start SPI
}

uint8_t nRFSNClass::sync(void)
{
	// make copy of current TX, RX addresses
	uint8_t prevTXAddr[4];
	memcpy(prevTXAddr,TX_ADDRESS,4);
	uint8_t prevRXAddr[4];
	memcpy(prevRXAddr,RX_ADDRESS,4);

	// set default addresses for syncing
	uint8_t addr1[4];
	uint8_t addr2[4];
	for (int i=0;i<4;i++)
	{
		RX_ADDRESS[i] = 0xE7;
		TX_ADDRESS[i] = 0xE7;
	}
	setRXAddr(RX_ADDR_P0,addr1,4);
	setTXAddr(addr2,4);

	// set to receive mode
	setRXMode();
	uint32_t time = 0;
	uint8_t synced = 0;
	while ((time < 300000) && (synced == 0))				// while less than 30s and unsynced
	{
		if (RXInt)									// has a packet been received?
		{
			uint8_t size = getPayloadSize();				// If so, get the size
			getPayload(size);								// then get the packet data and put in buffer

			if ((BufIn[0] == 0x03) && (size == 9))	// check for sync command and packet size of 9
			{
				for (uint8_t i=0; i<4; i++)					// if valid sync packet, write new addresses to EEPROM
				{
					EEPROM.write(i,BufIn[i+1]);
					EEPROM.write(i+4,BufIn[i+5]);
				}

				synced = 1;									// stop syncing
			}
			else
			{
				break;										// packet was not a valid sync packet
			}
		}
		delayMicroseconds(1000);							// wait 1ms
		time++;												// increment time variable
	}

	if (synced) {								// if sync was successful, set new addresses
		for (uint8_t i=0; i<4; i++)
		{
			TX_ADDRESS[i] = BufIn[i+1];
			RX_ADDRESS[i] = BufIn[i+5];
		}
		// set new TX address
		setTXAddr(TX_ADDRESS,4);
		// set new RX address
		setRXAddr(RX_ADDR_P0,RX_ADDRESS,4);
	} else {									// if sync failed, restore prev addresses and delete garbage
		memcpy(TX_ADDRESS,prevTXAddr,4);
		memcpy(RX_ADDRESS,prevRXAddr,4);
		delete prevTXAddr;
		delete prevRXAddr;
	}

	return synced;								// return 0 if failed, 1 if sucessful
}

void nRFSNClass::transmit(uint8_t len)
{
	if (len > 0)
	{	
		digitalWrite(nRFSN_CSN, LOW);	// select nRF

		SPI.transfer(0xA0);				// Send write payload command

		// write payload
		for (int i=0;i<len;i++) {
			SPI.transfer(BufOut[i]);
		}

		digitalWrite(nRFSN_CSN, HIGH);	// deselect nRF

		// toggle CE pin to transmit
		digitalWrite(nRFSN_CE, HIGH);
		delayMicroseconds(12);
		digitalWrite(nRFSN_CE, LOW);

		Busy = 1;	// Flag nRF24L01+ is busy
		
		delay(10);
	}
}
