==> Hengy/sensornet/Complete Libraries/PIC/lib/nRFSN/nRFSN.c <==
#include <xc.h>
#include <string.h>
#include "nRFSN.h"

void initSPI()
{
    SSP1CON1bits.CKP = 0;               // Clock polarity
    SSP1STATbits.CKE = 1;               // Clock edge detect
    SSP1STATbits.SMP = 1;               // Sample bit

    SSP1ADD = 0x03;                     // Set to 3
    SSP1CON1bits.SSPM = 0b1010;         // Clock = Fosc/(SSP1ADD + 1)(4) = 4MHz (default)

    SSP1CON1bits.SSPEN = 1;             // Enable SPI

    nRFSN_CSN = HIGH;                   // Start chip select pin high
}

uint8_t sync(void)
{
    // make copy of current TX, RX addresses
    uint8_t prevTXAddr[4];
    memcpy(prevTXAddr,TX_ADDRESS,4);
    uint8_t prevRXAddr[4];
    memcpy(prevRXAddr,RX_ADDRESS,4);

    // set default addresses for syncing
    uint8_t addr1[4];
    uint8_t addr2[4];
    for (int i=0;i<4;i++)
    {
        addr1[i] = 0xE7;
        addr2[i] = 0xE7;
    }
    setRXAddr(RX_ADDR_P0,addr1,4);
    setTXAddr(addr2,4);

    // set to receive mode
    setRXMode();
    uint32_t time = 0;
    uint8_t synced = 0;
    while ((time < 600000) && (synced == 0))		// while less than 30s and unsynced
    {
        if (RXInt)					// has a packet been received?
        {
            uint8_t size = getPayloadSize();            // If so, get the size
            getPayload(size,0);				// then get the packet data and put in buffer

            if ((BufIn[0] == SYNC_ADDR) && (size == 9))	// check for sync command and packet size of 9
            {

                for (uint8_t i=0; i<4; i++)		// if valid sync packet, write new addresses to EEPROM
                {
                    wEEPROM(i,BufIn[i+1]);
                    wEEPROM(i+4,BufIn[i+5]);
                }

                synced = 1;				// stop syncing
            }
            else
            {
                break;					// packet was not a valid sync packet
            }
        }
        __delay_us(500);				// wait 1ms
        time++;						// increment time variable
    }

    if (synced) {					// if sync was successful, set new addresses
        for (uint8_t i=0; i<4; i++)
        {
            TX_ADDRESS[i] = BufIn[i+1];
            RX_ADDRESS[i] = BufIn[i+5];
        }
    } else {						// if sync failed, restore prev addresses and delete garbage
        memcpy(TX_ADDRESS,prevTXAddr,4);
        memcpy(RX_ADDRESS,prevRXAddr,4);
    }

    // set new TX address
    setTXAddr(TX_ADDRESS,4);
    // set new RX address
    setRXAddr(RX_ADDR_P0,RX_ADDRESS,4);

    RXInt = 0;

    return synced;					// return 0 if failed, 1 if sucessful
}

void transmit(uint8_t len)
{
    if (len > 0)
    {
        nRFSN_CSN = LOW;	// select nRF

        spiTransfer(0xA0);		// Send write payload command

        // write payload
        for (int i=1;i<=len;i++) {
            spiTransfer(BufOut[i-1]);
        }

        nRFSN_CSN = HIGH;	// deselect nRF

        // toggle CE pin to transmit
        nRFSN_CE = HIGH;
        __delay_us(12);
        nRFSN_CE = LOW;

        Busy = 1;                       // Flag nRF24L01+ is busy
    }
}
